--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -76,8 +76,10 @@
 
   - if user_signed_in?
     .row
-      .span8
+      .span4
         = render 'site/wiki'
+      .span4
+        = render 'site/rule'
       .span4
         - if user_signed_in?
           = render 'site/news'
