--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = javascript_include_tag "application"
 
     = stylesheet_link_tag "validationEngine.jquery"
-    = javascript_include_tag "site", "jquery.validationEngine", "jquery.validationEngine-zh_CN"
+    =# javascript_include_tag "site", "jquery.validationEngine", "jquery.validationEngine-zh_CN"
 
   %body
     .navbar.navbar-fixed-top
