--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,15 +1,16 @@
 /*
-* This is a manifest file that'll be compiled into application.css, which will include all the files
-* listed below.
-*
-* Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
-* or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
-*
-* You're free to add application-wide styles to this file and they'll appear at the top of the
-* compiled file, but it's generally better to create a new file per style scope.
-*
-*= require_self
-*/
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the top of the
+ * compiled file, but it's generally better to create a new file per style scope.
+ *
+ *= require_self
+ *= require_tree .
+ */
 
 // Set the correct sprite paths
 $iconSpritePath: image-path('glyphicons-halflings.png');
@@ -18,14 +19,7 @@ $iconWhiteSpritePath: image-path('glyphicons-halflings-white.png');
 body { padding-top: 80px; font-family: "Microsoft Yahei";}
 @import "bootstrap-responsive";
 
-/*
-.carousel {
-  width: 940px;
-}
-.carousel-inner { text-align: center; }
-.carousel .item > img { display: inline-block; }
-.carousel { background-color: black; }
-*/
+@import "validationEngine.jquery.css";
 
 .content {
   background-color: #eee;
@@ -40,65 +34,65 @@ body { padding-top: 80px; font-family: "Microsoft Yahei";}
 }
 
 .subnav {
-    background-color: #EEEEEE;
-    background-image: -moz-linear-gradient(center top , #F5F5F5 0%, #EEEEEE 100%);
-    background-repeat: repeat-x;
-    border: 1px solid #E5E5E5;
-    border-radius: 4px 4px 4px 4px;
-    height: 36px;
-    width: 100%;
+  background-color: #EEEEEE;
+  background-image: -moz-linear-gradient(center top , #F5F5F5 0%, #EEEEEE 100%);
+  background-repeat: repeat-x;
+  border: 1px solid #E5E5E5;
+  border-radius: 4px 4px 4px 4px;
+  height: 36px;
+  width: 100%;
 }
 .subnav .nav {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 .subnav .nav > li > a {
-    border-left: 1px solid #F5F5F5;
-    border-radius: 0 0 0 0;
-    border-right: 1px solid #E5E5E5;
-    margin: 0;
-    padding-bottom: 11px;
-    padding-top: 11px;
+  border-left: 1px solid #F5F5F5;
+  border-radius: 0 0 0 0;
+  border-right: 1px solid #E5E5E5;
+  margin: 0;
+  padding-bottom: 11px;
+  padding-top: 11px;
 }
 .subnav .nav > .active > a, .subnav .nav > .active > a:hover {
-    background-color: #E9E9E9;
-    border-left: 0 none;
-    border-right-color: #DDDDDD;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.05) inset;
-    color: #777777;
-    padding-left: 13px;
+  background-color: #E9E9E9;
+  border-left: 0 none;
+  border-right-color: #DDDDDD;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.05) inset;
+  color: #777777;
+ padding-left: 13px;
 }
 .subnav .nav > .active > a .caret, .subnav .nav > .active > a:hover .caret {
-    border-top-color: #777777;
+  border-top-color: #777777;
 }
 .subnav .nav > li:first-child > a, .subnav .nav > li:first-child > a:hover {
-    border-left: 0 none;
-    border-radius: 4px 0 0 4px;
-    padding-left: 12px;
+  border-left: 0 none;
+  border-radius: 4px 0 0 4px;
+  padding-left: 12px;
 }
 .subnav .nav > li:last-child > a {
-    border-right: 0 none;
+  border-right: 0 none;
 }
 .subnav .dropdown-menu {
-    border-radius: 0 0 4px 4px;
+  border-radius: 0 0 4px 4px;
 }
 .subnav-fixed {
-    border-color: #D5D5D5;
-    border-radius: 0 0 0 0;
-    border-width: 0 0 1px;
-    box-shadow: 0 1px 0 #FFFFFF inset, 0 1px 5px rgba(0, 0, 0, 0.1);
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 40px;
-    z-index: 1020;
+  border-color: #D5D5D5;
+  border-radius: 0 0 0 0;
+  border-width: 0 0 1px;
+  box-shadow: 0 1px 0 #FFFFFF inset, 0 1px 5px rgba(0, 0, 0, 0.1);
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 40px;
+  z-index: 1020;
 }
 .subnav-fixed .nav {
-    margin: 0 auto;
-    padding: 0 1px;
-    width: 938px;
+  margin: 0 auto;
+  padding: 0 1px;
+  width: 938px;
 }
 .subnav .nav > li:first-child > a, .subnav .nav > li:first-child > a:hover {
-    border-radius: 0 0 0 0;
+  border-radius: 0 0 0 0;
 }
 
 .border {
