--- a/app/views/site/_news.html.haml
+++ b/app/views/site/_news.html.haml
@@ -9,6 +9,6 @@
     %p
       #notice_content
         = n.content.length > 120 ? n.content[0,120] + ' ...' : n.content
+        = link_to t('global.show'), n#, :class=> 'btn btn-primary'
     %p
       #notice_date= l n.created_at, :format => :long
-= link_to t('global.show'), n, :class=> 'btn btn-primary'
