--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -6,22 +6,22 @@
           .carousel
             .carousel-inner
               .item.active
-                = image_tag('slide11.jpg', :title=>t('home.content1'))
+                = image_tag('boat11.jpg', :title=>t('home.content1'))
                 .carousel-caption
                   %h3=t('home.title1')
                   %p=t('home.content1')
               .item
-                = image_tag('slide22.jpg', :title=>t('home.content2'))
+                = image_tag('boat22.jpg', :title=>t('home.content2'))
                 .carousel-caption
                   %h3=t('home.title2')
                   %p=t('home.content2')
               .item
-                = image_tag('slide33.jpg', :title=>t('home.content3'))
+                = image_tag('boat33.jpg', :title=>t('home.content3'))
                 .carousel-caption
                   %h3=t('home.title3')
                   %p=t('home.content3')
               .item
-                = image_tag('slide44.jpg', :title=>t('home.content4'))
+                = image_tag('boat44.jpg', :title=>t('home.content4'))
                 .carousel-caption
                   %h3=t('home.title4')
                   %p=t('home.content4')
