--- a/app/views/site/_news.html.haml
+++ b/app/views/site/_news.html.haml
@@ -10,4 +10,4 @@
         = n.content.length > 120 ? n.content[0,120] + ' ...' : n.content
         = link_to t('global.show'), n#, :class=> 'btn btn-primary'
     %p
-      #notice_date= l n.created_at, :format => :long
+      #notice_date= l n.created_at, :format => :single
