--- a/app/views/site/_tasks.html.haml
+++ b/app/views/site/_tasks.html.haml
@@ -11,5 +11,5 @@
       = l c.created_at, :format => :simple
       = c.local_status
 
-.pull-right
+%h5.pull-right
   = link_to t('global.enter')+t('site.task'), tasks_url
