--- a/app/views/notices/index.html.haml
+++ b/app/views/notices/index.html.haml
@@ -12,7 +12,7 @@
       - @notices.each do |notice|
         %tr
           %td= notice.title.length > 25 ? notice.title[0..25]+'...' : notice.title
-          %td= notice.content.length > 50 ? notice.content[0..50] + '...' : notice.content
+          %td= notice.content.length > 50 ? notice.content[0..50] + '...' : notice.content if notice.content
           %td= l notice.created_at, :format => :short
           %td
             = link_to notice do
